<resources>
    <string name="app_name">MiNegocio</string>
    <string name="hola_de_nuevo">¡Hola de nuevo!</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="calendario">Calendario</string>
    <string name="hoy">HOY</string>
    <string name="confirmar_fecha">Confirmar fecha</string>
    <string name="turnos_del_d_a">Turnos del día</string>
    <string name="informaci_n_de_contacto">Información de contacto</string>
    <string name="agenda">Agenda</string>
    <string name="mis_servicios">Mis servicios</string>
    <string name="pagos">Pagos</string>
    <string name="hacer_promoci_n">Hacer Promoción</string>
    <string name="editar">Editar</string>
    <string name="promocionar">Promocionar</string>
    <string name="promo">Promo</string>
    <string name="gesti_n_de_mis_servicios">Gestión de mis servicios</string>
    <string name="duraci_n_en_minutos">Duración (en minutos)</string>
    <string name="precio">Precio</string>
    <string name="guardar">Guardar</string>
    <string name="eliminar">Eliminar</string>
    <string name="promociones">Promociones</string>
    <string name="mis_promociones">Mis promociones</string>
    <string name="crear_una_nueva_promoci_n">Crear una nueva promoción</string>
    <string name="descripci_n_de_la_promo">Descripción de la promo</string>
    <string name="condici_n_especial_si_la_hay">Condición especial (si la hay)</string>
    <string name="precio_nuevo_si_lo_hay">Precio nuevo (si lo hay)</string>
    <string name="fecha_de_finalizaci_n">Fecha de finalización</string>
    <string name="agregar_imagen">Agregar imagen</string>
    <string name="guardar_promo">Guardar promo</string>
    <string name="historial">HISTORIAL</string>
    <string name="ver_pagos_pendientes">VER PAGOS PENDIENTES</string>
    <string name="pagos_pendientes">Pagos pendientes</string>
    <string name="registrar_pago">REGISTRAR PAGO</string>
    <string name="monto_pagado">Monto pagado</string>
    <string name="fecha_del_pago">Fecha del pago</string>
    <string name="historial_de_pagos">Historial de pagos</string>
    <string name="registrar_un_nuevo_pago">Registrar un nuevo pago</string>
    <string name="vuelva_pronto">¡Vuelva pronto!</string>
    <string name="esta_seguro_de_que_desea_cerrar_sesi_n">¿Esta seguro de que desea cerrar sesión?</string>
    <string name="no">No</string>
    <string name="s">Sí</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
</resources>