<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/agenda"
            android:title="@string/agenda" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/services"
            android:title="@string/mis_servicios" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/pagos"
            android:title="@string/pagos" />
        <item
            android:id="@+id/promosFragment"
            android:icon="@drawable/promo"
            android:title="@string/promociones"
            />
        <item
            android:id="@+id/logoutFragment"
            android:icon="@drawable/logout"
            android:title="@string/cerrar_sesi_n"
            />
    </group>
</menu>