<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.minegocio.menu.ui.home.HomeFragment"
        android:label="@string/calendario"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_turnosFragment"
            app:destination="@id/turnosFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.minegocio.menu.ui.gallery.GalleryFragment"
        android:label="@string/mis_servicios"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/action_nav_gallery_to_formServicioFragment"
            app:destination="@id/formServicioFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.minegocio.menu.ui.slideshow.SlideshowFragment"
        android:label="@string/pagos"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/turnosFragment"
        android:name="com.example.minegocio.menu.ui.home.TurnosFragment"
        android:label="@string/turnos_del_d_a"
        tools:layout="@layout/fragment_turnos" >
        <action
            android:id="@+id/action_turnosFragment_to_informacionClienteFragment"
            app:destination="@id/informacionClienteFragment" />
    </fragment>
    <fragment
        android:id="@+id/informacionClienteFragment"
        android:name="com.example.minegocio.menu.ui.home.InformacionClienteFragment"
        android:label="@string/informaci_n_de_contacto"
        tools:layout="@layout/fragment_informacion_cliente" />
    <fragment
        android:id="@+id/formServicioFragment"
        android:name="com.example.minegocio.menu.ui.gallery.FormServicioFragment"
        android:label="@string/gesti_n_de_mis_servicios"
        tools:layout="@layout/fragment_form_servicio" />
    <fragment
        android:id="@+id/promosFragment"
        android:name="com.example.minegocio.menu.ui.promo.PromosFragment"
        android:label="@string/mis_promociones"
        tools:layout="@layout/fragment_promos" >
        <action
            android:id="@+id/action_promosFragment_to_crearPromoFragment"
            app:destination="@id/crearPromoFragment" />
    </fragment>
    <fragment
        android:id="@+id/crearPromoFragment"
        android:name="com.example.minegocio.menu.ui.promo.CrearPromoFragment"
        android:label="@string/crear_una_nueva_promoci_n"
        tools:layout="@layout/fragment_crear_promo" />
</navigation>